# ticket-price-tracker

./: .env.example  .gitignore  README.md  api_experiment.py  pyproject.toml
app/: config.py  crud.py  models.py  schemas.py  services.py
